--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,14 @@
       </plugin>
     </plugins>
   </build>
+  
+  <dependencies>
+  <dependency>
+    <groupId>io.netty</groupId>
+    <artifactId>netty-all</artifactId> <!-- Use 'netty-all' for 4.0 or above -->
+    <version>4.0.0.CR9</version>
+    <scope>compile</scope>
+  </dependency>
+</dependencies>
+  
 </project>
