Generate jar with dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>Glydar</groupId>
   <artifactId>Glydar</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <build>
+  <build> 
     <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
@@ -14,6 +14,28 @@
           <target>1.7</target>
         </configuration>
       </plugin>
+    
+    <plugin>
+      <artifactId>maven-assembly-plugin</artifactId>
+      <configuration>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+        <archive>
+          <manifest>
+            <mainClass>org.glydar.Glydar</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
+      <executions>
+        <execution>
+          <phase>package</phase>
+          <goals>
+            <goal>single</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
     </plugins>
   </build>
   
