--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,13 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>buildserver</id>
+            <url>http://maven.cyberkitsune.net/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>io.netty</groupId>
@@ -53,6 +60,8 @@
             <groupId>Paraglydar</groupId>
             <artifactId>Paraglydar</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
