--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
             <version>4.0.0.CR9</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+       	  <groupId>org.reflections</groupId>
+       	  <artifactId>reflections</artifactId>
+       	  <version>0.9.9-RC1</version>
+        </dependency>
 
         <dependency>
             <groupId>Paraglydar</groupId>
